--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li><a href="#reading" class="group-nav-link">
                     <ion-icon name="book-outline"></ion-icon>Reading
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#references" class="group-nav-link">
                     <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
                 </a></li>
             <li><a href="" class="group-nav-link">
@@ -604,6 +604,17 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
+                                <img src="/resources/icons/itcss.png" alt="ITCSS"></div>
+                            <h3>ITCSS</h3>
+                            <p>Inverted Triangle CSS (ITCSS) is a great method for architecting your CSS code. If you're
+                                building medium to large projects, you might find it useful.</p>
+                            <a href="https://itcss.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
                                 <img src="/resources/icons/you-dont-know-js.png" alt="You don't know JS"></div>
                             <h3>You don't know JS</h3>
                             <p>Take a deep dive into JavaScript with this free series, which was originally funded on
@@ -767,17 +778,24 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/inclusivecomponents.png" alt="Inclusive Components"></div>
                             <h3>Inclusive Components</h3>
-                            <p>This blog by Heydon Pickering will help you build better interfaces. Each post explores a common interface component and comes up with a better, more robust, and accessible version of it.</p>
-                            <a href="https://inclusive-components.design/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>This blog by Heydon Pickering will help you build better interfaces. Each post explores a
+                                common interface component and comes up with a better, more robust, and accessible
+                                version of it.</p>
+                            <a href="https://inclusive-components.design/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/moderncsssolutions.png" alt="Modern CSS Solutions for Old CSS Problems"></div>
+                                <img src="/resources/icons/moderncsssolutions.png"
+                                    alt="Modern CSS Solutions for Old CSS Problems"></div>
                             <h3>Modern CSS Solutions for Old CSS Problems</h3>
-                            <p>This blog series by Stephanie Eckles will help you upgrade your CSS skills. Every post presents modern CSS techniques in an engaging, easy to understand manner that will help you grow as a developer.</p>
-                            <a href="https://moderncss.dev/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>This blog series by Stephanie Eckles will help you upgrade your CSS skills. Every post
+                                presents modern CSS techniques in an engaging, easy to understand manner that will help
+                                you grow as a developer.</p>
+                            <a href="https://moderncss.dev/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -785,16 +803,208 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/joshwcomeau.jpg" alt="Josh Comeau"></div>
                             <h3>Josh Comeau</h3>
-                            <p>Josh Comeau has an incredible knack for explaining topics in an engaging way. Each article is beautifully presented and will have you reading all the way to the end.</p>
-                            <a href="https://joshwcomeau.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Josh Comeau has an incredible knack for explaining topics in an engaging way. Each
+                                article is beautifully presented and will have you reading all the way to the end.</p>
+                            <a href="https://joshwcomeau.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
-               
+
                     </article>
                 </section>
 
+                <!--  --------- References & CheatSheets ---------- -->
 
-                <!-- <section class="group group-" id=""></section>
+                <section class="group group-References" id="references">
+                    <!-- ---- section-header ------ -->
+                    <header class="group-header">
+                        <ion-icon name="documents-outline"></ion-icon>
+                        <h2>References & CheatSheets</h2>
+                    </header>
+                    <!-- ---------- section-cards ------ -->
+                    <article class="group-cards">
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/htmlrefio.png" alt="HTML Reference"></div>
+                            <h3>HTML Reference</h3>
+                            <p>A free HTML reference featuring all elements and attributes. It's a great website to
+                                refer back to if you need to check up on something HTML-related.</p>
+                            <a href="https://htmlreference.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssrefio.png" alt="CSS Reference"></div>
+                            <h3>CSS Reference</h3>
+                            <p>A free visual guide to CSS. It features the most popular properties and explains them
+                                with illustrated and animated examples.</p>
+                            <a href="https://cssreference.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/mdn.jpg" alt="MDN"></div>
+                            <h3>MDN</h3>
+                            <p>MDN is an incredible resource from Mozilla for HTML, CSS, JavaScript and beyond. Useful
+                                for beginners and seniors alike. You'll often find yourself coming back throughout your
+                                development journey.</p>
+                            <a href="https://developer.mozilla.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/emmet.svg" alt="Emmet Cheat Sheet"></div>
+                            <h3>Emmet Cheat Sheet</h3>
+                            <p>This cheat sheet will be a valuable resource in your early days of using Emmet.</p>
+                            <a href="https://docs.emmet.io/cheat-sheet/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/htmlcheatsheetcom.png" alt="HTML Cheat Sheet"></div>
+                            <h3>HTML Cheat Sheet</h3>
+                            <p>Although called HTML Cheat Sheet, this site is also a great resource for CSS and
+                                JavaScript. Perfect for when you're getting started as a front-end developer.</p>
+                            <a href="https://htmlcheatsheet.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/codrops.png" alt="Codrops CSS Reference"></div>
+                            <h3>Codrops CSS Reference</h3>
+                            <p>A great reference for CSS from Codrops. Be sure to have a look if you need a hand.</p>
+                            <a href="https://tympanus.net/codrops/css_reference/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/accessibilitymatters.jpg" alt="Accessibility Matters"></div>
+                            <h3>Accessibility Matters</h3>
+                            <p>Your site needs to be usable by everyone. Accessibility Matters is a great resource,
+                                offering HTML patterns to help teach you the ins and outs of accessible markup. </p>
+                            <a href="http://www.a11ymatters.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/caniuse.png" alt="Can I Use"></div>
+                            <h3>Can I Use</h3>
+                            <p>Can I Use will tell you what the browser support is like for the latest and greatest
+                                advances in front-end technologies.</p>
+                            <a href="https://caniuse.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/airbnb.png" alt="Airbnb CSS Styleguide"></div>
+                            <h3>Airbnb CSS Styleguide</h3>
+                            <p>For a little insight into how a large company, such as Airbnb, structures their CSS, have
+                                a read through their CSS styleguide. It will give you plenty of tips and tricks.</p>
+                            <a href="https://github.com/airbnb/css" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/airbnb.png" alt="Airbnb JavaScript Styleguide"></div>
+                            <h3>Airbnb JavaScript Styleguide</h3>
+                            <p>Like the CSS style guide, Airbnb's JavaScript style guide is very insightful. They also
+                                include their style guide for React inside it.</p>
+                            <a href="https://github.com/airbnb/javascript" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/suerherojs.png" alt="Superhero.js"></div>
+                            <h3>Superhero.js</h3>
+                            <p>Some resource-ception here with Superhero.js. The site has an amazing collection of
+                                articles, videos and presentations on all things JavaScript. Definitely worth checking
+                                out!</p>
+                            <a href="http://superherojs.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/websitesetupjs.png" alt="Website Setup JS Cheat Sheet"></div>
+                            <h3>Website Setup JS Cheat Sheet</h3>
+                            <p>A great, in-depth JavaScript cheat sheet that is a one-stop-shop reference guide for the
+                                language.</p>
+                            <a href="https://websitesetup.org/javascript-cheat-sheet/" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/css tricks.jpg" alt="SVG Compendium"></div>
+                            <h3>SVG Compendium</h3>
+                            <p>The definitive resource for all things SVG. Be sure to bookmark this article and come
+                                back to it whenever you need.</p>
+                            <a href="https://css-tricks.com/mega-list-svg-information/" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/flexboxcheatsheetmalven.png" alt="Flexbox Cheat Sheet"></div>
+                            <h3>Flexbox Cheat Sheet</h3>
+                            <p>This is a great visual cheat sheet to help you get to grips with Flexbox. Well-worth a
+                                bookmark!</p>
+                            <a href="https://flexbox.malven.co/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/gridmalven.png" alt="Grid Cheat Sheet"></div>
+                            <h3>Grid Cheat Sheet</h3>
+                            <p>This CSS Grid cheat sheet will prove a valuable resource in the early days of building
+                                Grid layouts.</p>
+                            <a href="http://grid.malven.co/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/css tricks.jpg" alt="A Complete Guide to Flexbox "></div>
+                            <h3>A Complete Guide to Flexbox </h3>
+                            <p>This complete guide explains everything about flexbox, focusing on all the different possible properties for the parent element (the flex container) and the child elements (the flex items).</p>
+                            <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                    </article>
+                </section>
+                <!-- <section class="group group-" id=""></section>          
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
