--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
                     <ion-icon name="terminal-outline"></ion-icon>Tools
                     <!--   Completed   -->
                 </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="logo-html5"></ion-icon>HTML
-                </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#css" class="group-nav-link">
                     <ion-icon name="logo-css3"></ion-icon>CSS
                 </a></li>
             <li><a href="" class="group-nav-link">
@@ -882,7 +879,18 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
-
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/css tricks.jpg" alt="HTML Entity Reference by CSS-Tricks">
+                            </div>
+                            <h3>HTML Entity Reference by CSS-Tricks</h3>
+                            <p>Super useful reference, gives you HTML entitiy name, numeric code, hex code and ISO code.
+                            </p>
+                            <a href="https://css-tricks.com/snippets/html/glyphs/" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -1280,23 +1288,141 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
-                        
+
 
                     </article>
                 </section>
 
 
-                <!--  --------- HTML ---------- -->
+                <!--  --------- CSS ---------- -->
 
-                <section class="group group-tools" id="tools">
+                <section class="group group-css" id="css">
                     <!-- ---- section-header ------ -->
                     <header class="group-header">
-                        <ion-icon name="logo-html5"></ion-icon>
-                        <h2>HTML</h2>
+                        <ion-icon name="logo-css3"></ion-icon>
+                        <h2>CSS</h2>
                     </header>
                     <!-- ---------- section-cards ------ -->
                     <article class="group-cards">
 
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/animatecss.png" alt="Animate.css"></div>
+                            <h3>Animate.css</h3>
+                            <p>Just-add-water CSS animations. A simple CSS library that lates you add animations with
+                                ease.</p>
+                            <a href="http://daneden.github.io/animate.css/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/responsivegridsystem.png" alt="Responsive Grid System"></div>
+                            <h3>Responsive Grid System</h3>
+                            <p>A quick, flexible and easy fluid grid for spectacularly easy responsive web design.</p>
+                            <a href="http://www.responsivegridsystem.com/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssforthosewhohatecss.png" alt="CSS for People Who Hate CSS">
+                            </div>
+                            <h3>CSS for People Who Hate CSS</h3>
+                            <p>Excellent guide on how to write better, cleaner and more reusable CSS code.</p>
+                            <a href="http://paulcpederson.com/articles/css-for-people-who-hate-css" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/clippy.png" alt="Clippy"></div>
+                            <h3>Clippy</h3>
+                            <p>A small tool to help you using the new and powerful clip-path property.</p>
+                            <a href="http://bennettfeely.com/clippy/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cubic.png" alt="Cubic-bezier function generator"></div>
+                            <h3>Cubic-bezier function generator</h3>
+                            <p>A tool for visually generating timing animation functions to use in CSS transitions and
+                                animations.</p>
+                            <a href="http://cubic-bezier.com/#.17,.67,.83,.67" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/csseasingfunctiond.png" alt="CSS easing functions"></div>
+                            <h3>CSS easing functions</h3>
+                            <p>An amazing collection of easing functions bo be used in CSS transitions and animations.
+                            </p>
+                            <a href="http://easings.net/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/animista.png" alt="Animista"></div>
+                            <h3>Animista</h3>
+                            <p>Animista is a place where you can play with a collection of ready to use CSS animations, tweak them and download only those you will actually use.</p>
+                            <a href="https://animista.net/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/freefrontend.jpg" alt="Free Frontend"></div>
+                            <h3>Free Frontend</h3>
+                            <p>Free hand-picked HTML, CSS and JavaScript (jQuery, React, Vue) code examples, tutorials and articles.</p>
+                            <a href="https://freefrontend.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/purecss.png" alt="PURE CSS"></div>
+                            <h3>PURE CSS</h3>
+                            <p>A set of small, responsive CSS modules that you can use in every web project.</p>
+                            <a href="https://purecss.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/keyframes.png" alt="Keyframes.app"></div>
+                            <h3>Keyframes.app</h3>
+                            <p>Dead simple visual tools to help you generate CSS for your projects.</p>
+                            <a href="https://keyframes.app/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/loadingio.png" alt="LOADING.IO"></div>
+                            <h3>LOADING.IO</h3>
+                            <p>Service for making ajax loaders / loading gifs / preloaders and animated icons, live background, animated text in GIF / SVG / APNG / CSS.</p>
+                            <a href="https://loading.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssvalues.jpg" alt=""></div>
+                            <h3>CSS Values</h3>
+                            <p>Web app to search the syntax and all possible values for any valid CSS property.</p>
+                            <a href="https://cssvalues.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
