--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
 
                 <!--  --------- Communities & Blogs ---------- -->
 
-                <section class="group group-challenges" id="challenges">
+                <section class="group group-communities" id="communitis">
                     <!-- ---- section-header ------ -->
                     <header class="group-header">
                         <ion-icon name="chatbubbles-outline"></ion-icon>
